--- a/index.html
+++ b/index.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
-
-
+  <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
 
-  <!-- Sign-up form start -->
+<body>
   <section class="newsletter">
-    <img src="./assets/images/illustration-sign-up-mobile.svg" alt="Sign up illustration" class="newsletter__image">
+    <div class="newsletter__image-container">
+
+    </div>
     <section class="newsletter__info">
       <h1 class="newletter__title">Stay updated!</h1>
-      <p class="newsletter__">Join 60,000+ product managers receiving monthly updates on:</p>
-      <ul>
+      <p class="newsletter__description">Join 60,000+ product managers receiving monthly updates on:</p>
+      <ul class="newsletter__list">
         <li> <img src="./assets/images/icon-list.svg" alt="List icon"> Product discovery and building what matters</li>
         <li> <img src="./assets/images/icon-list.svg" alt="List icon"> Measuring to ensure updates are a success</li>
         <li> <img src="./assets/images/icon-list.svg" alt="List icon"> And much more!</li>
       </ul>
-      <form action="post">
+      <form class="form" action="post">
         <label for="email-input">Email address</label>
         <input id="email-input" type="email" placeholder="email@company.com" required>
         <button type="submit">Subscribe to monthly newsletter</button>
       </form>
     </section>
-    <section class="newsletter__success-message">
+    <section class="newsletter__success-message hide">
       <img src="./assets/images/icon-success.svg" alt="Icon success" class="newsletter__success-icon">
       <h2 class="newsletter__success-title">Thanks for subscribing!</h2>
-      <p class="newsletter__success-text">A confirmation email has been sent to ash@loremcompany.com. Please open it and click the button inside to confirm your subscription.</p>
+      <p class="newsletter__success-text">A confirmation email has been sent to ash@loremcompany.com. Please open it and
+        click the button inside to confirm your subscription.</p>
       <button class="newsletter__dismiss-button">Dismiss message</button>
     </section>
   </section>
-  
+
 </body>
+
 </html>
