--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
       <form class="form" action="post">
         <label for="email-input">Email address</label>
         <input id="email-input" type="email" placeholder="email@company.com" required>
-        <button type="submit">Subscribe to monthly newsletter</button>
+        <button class="newsletter__submit-button" type="submit">Subscribe to monthly newsletter</button>
       </form>
     </section>
-    <section class="newsletter__success-message hide">
+  </section>
+  <section class="newsletter__success-message hide">
       <img src="./assets/images/icon-success.svg" alt="Icon success" class="newsletter__success-icon">
       <h2 class="newsletter__success-title">Thanks for subscribing!</h2>
-      <p class="newsletter__success-text">A confirmation email has been sent to ash@loremcompany.com. Please open it and
+      <p class="newsletter__success-text">A confirmation email has been sent to <strong>ash@loremcompany.com</strong>. Please open it and
         click the button inside to confirm your subscription.</p>
       <button class="newsletter__dismiss-button">Dismiss message</button>
     </section>
-  </section>
-
+    <script src="./app.js"></script>
 </body>
 
 </html>
