Adding styles to the desktop vesion and tablet version for main screen and success screen

--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
     </section>
   </section>
   <section class="newsletter__success-message hide">
-      <img src="./assets/images/icon-success.svg" alt="Icon success" class="newsletter__success-icon">
-      <h2 class="newsletter__success-title">Thanks for subscribing!</h2>
-      <p class="newsletter__success-text">A confirmation email has been sent to <strong>ash@loremcompany.com</strong>. Please open it and
-        click the button inside to confirm your subscription.</p>
-      <button class="newsletter__dismiss-button">Dismiss message</button>
-    </section>
-    <script src="./app.js"></script>
+    <img src="./assets/images/icon-success.svg" alt="Icon success" class="newsletter__success-icon">
+    <h2 class="newsletter__success-title">Thanks for subscribing!</h2>
+    <p class="newsletter__success-text">A confirmation email has been sent to <strong>ash@loremcompany.com</strong>.
+      Please open it and
+      click the button inside to confirm your subscription.</p>
+    <button class="newsletter__dismiss-button">Dismiss message</button>
+  </section>
+  <script src="./app.js"></script>
 </body>
 
 </html>
